name: warp-tls-example
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.8
data-files: *.htm, *.png, *.pem

executable warp-tls-example
    main-is: Main.hs
    ghc-options: -Wall
    build-depends: base >=4.6
                 , bytestring >=0.10
                 , transformers >=0.3
                 , websockets >=0.7
                 , tls >=1.1
                 , warp >=1.3
                 , warp-tls >=1.3
                 , wai-websockets >=1.3
                 , wai-app-static >=0.2
                 , wai-extra >=1.3

